versioned_docs/version-2.24/reference/targets/helm_chart.mdx
---
title: helm_chart
description: |
  A Helm chart.
---

import Field from "@site/src/components/reference/Field";
import styles from "@site/src/components/reference/styles.module.css";

---

A Helm chart.

Backend: <span className="color--primary">`pants.backend.experimental.helm`</span>

---

<span className={styles.options}>

## `chart`

<Field
    type_repr={`str | None`}
    default_repr={`'Chart.yaml'`}
>

The chart definition file.

</Field>

## `dependencies`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Addresses to other targets that this target depends on, e.g. `['helloworld/subdir:lib', 'helloworld/main.py:lib', '3rdparty:reqs#django']`.

This augments any dependencies inferred by Pants, such as by analyzing your imports. Use `pants dependencies` or `pants peek` on this target to get the final result.

See https://www.pantsbuild.org/2.24/docs/using-pants/key-concepts/targets-and-build-files for more about how addresses are formed, including for generated targets. You can also run `pants list ::` to find all addresses in your project, or `pants list dir` to find all addresses defined in that directory.

If the target is in the same BUILD file, you can leave off the BUILD file path, e.g. `:tgt` instead of `helloworld/subdir:tgt`. For generated first-party addresses, use `./` for the file path, e.g. `./main.py:tgt`; for all other generated targets, use `:tgt#generated_name`.

You may exclude dependencies by prefixing with `!`, e.g. `['!helloworld/subdir:lib', '!./sibling.txt']`. Ignores are intended for false positives with dependency inference; otherwise, simply leave off the dependency from the BUILD file.

</Field>

## `description`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

A human-readable description of the target.

Use `pants list --documented ::` to see all targets with descriptions.

</Field>

## `kubeconform_ignore_missing_schemas`

<Field
    type_repr={`bool | None`}
    default_repr={`None`}
    backend="pants.backend.experimental.helm.check.kubeconform"
>

Whether to fail if there are missing schemas for custom resources.

</Field>

## `kubeconform_ignore_sources`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
    backend="pants.backend.experimental.helm.check.kubeconform"
>

Regular expression patterns specifying paths to ignore.

</Field>

## `kubeconform_kubernetes_version`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
    backend="pants.backend.experimental.helm.check.kubeconform"
>

Kubernetes version to use for the validation.

</Field>

## `kubeconform_reject_kinds`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
    backend="pants.backend.experimental.helm.check.kubeconform"
>

List of kinds or GVKs to reject.

</Field>

## `kubeconform_skip_kinds`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
    backend="pants.backend.experimental.helm.check.kubeconform"
>

List of kinds or GVKs to ignore.

</Field>

## `kubeconform_strict`

<Field
    type_repr={`bool | None`}
    default_repr={`None`}
    backend="pants.backend.experimental.helm.check.kubeconform"
>

Run Kubeconform in strict mode.

</Field>

## `lint_quiet`

<Field
    type_repr={`bool | None`}
    default_repr={`None`}
>

If set to true, print only warnings and errors.

</Field>

## `lint_strict`

<Field
    type_repr={`bool | None`}
    default_repr={`None`}
>

If set to true, enables strict linting of this Helm chart.

</Field>

## `output_path`

<Field
    type_repr={`str | None`}
    default_repr={`'\${spec_path_normalized}/\${target_name_normalized}\${file_suffix}'`}
>

Where the built directory tree should be located.

If undefined, this will use the path to the BUILD file, For example, `src/charts/mychart:tgt_name` would be `src.charts.mychart/tgt_name/`.

Regardless of whether you use the default or set this field, the path will end with Helms&#x27;s file format of `<chart_name>-<chart_version>.tgz`, where `chart_name` and `chart_version` are the values extracted from the Chart.yaml file. So, using the default for this field, the target `src/charts/mychart:tgt_name` might have a final path like `src.charts.mychart/tgt_name/mychart-0.1.0.tgz`.

When running `pants package`, this path will be prefixed by `--distdir` (e.g. `dist/`).

Warning: setting this value risks naming collisions with other package targets you may have.

</Field>

## `registries`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`('<ALL DEFAULT HELM REGISTRIES>',)`}
>

List of addresses or configured aliases to any OCI registries to use for the built chart.

The address is an `oci://` prefixed domain name with optional port for your registry, and any registry aliases are prefixed with `@` for addresses in the `[helm].registries` configuration section.

By default, all configured registries with `default = true` are used.

Example:

```
# pants.toml
[helm.registries.my-registry-alias]
address = "oci://myregistrydomain:port"
default = false # optional

# example/BUILD
helm_chart(
    registries = [
        "@my-registry-alias",
        "oci://myregistrydomain:port",
    ],
)
```

The above example shows two valid `registry` options: using an alias to a configured registry and the address to a registry verbatim in the BUILD file.

</Field>

## `repository`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

Repository to use in the Helm registry where this chart is going to be published.

If no value is given and `[helm].default-registry-repository` is undefined too, then the chart will be pushed to the root of the OCI registry.

</Field>

## `skip_kubeconform`

<Field
    type_repr={`bool`}
    default_repr={`False`}
    backend="pants.backend.experimental.helm.check.kubeconform"
>

If set to true, do not run any kubeconform checking in this Helm target when running `pants check`.

</Field>

## `skip_lint`

<Field
    type_repr={`bool`}
    default_repr={`False`}
>

If set to true, do not run any linting in this Helm chart when running `pants lint`.

</Field>

## `skip_push`

<Field
    type_repr={`bool`}
    default_repr={`False`}
>

If set to true, do not push this Helm chart to registries when running `pants publish`.

</Field>

## `sources`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`('.helmignore', 'README.md', 'LICENSE', 'values.yaml', 'values.yml', 'values.schema.json', 'templates/*.yaml', 'templates/*.yml', 'templates/*.tpl', 'templates/NOTES.txt', 'crds/*.yaml', 'crds/*.yml')`}
>

A list of files and globs that belong to this target.

Paths are relative to the BUILD file&#x27;s directory. You can ignore files/globs by prefixing them with `!`.

Example: `sources=['values.yaml', 'templates/*.yaml', '!values_ignore.yaml']`

</Field>

## `tags`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Arbitrary strings to describe a target.

For example, you may tag some test targets with &#x27;integration_test&#x27; so that you could run `pants --tag='integration_test' test ::` to only run on targets with that tag.

</Field>

## `version`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

Version number for the given Helm chart.

When specified, the version provided in the source Chart.yaml file will be overriden by the value given to this field.

</Field>

</span>
